# AdSimulation

./: CMakeLists.txt  README.md  main.cpp
program.dSYM/Contents/Resources/DWARF/: program
src/action/: action_strategy.h  text_action_strategy.cc  text_action_strategy.h
src/analysis/: user_analysis.cc  user_analysis.h
src/common/: ad.h  ad_with_action.cc  ad_with_action.h  item.cc  item.h  user.cc  user.h
src/container/: lru_cache.h
src/tool/: load_data.cc  load_data.h
test/: test_items.cc  test_items.h  test_string_int.cc  test_string_int.h
test/data/: items.txt  user1.txt  user2.txt  user3.txt  users.txt
